     
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btNovaLeitura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btNovaLeitura" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btLimparLeituras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btLimparLeituras" />

            <Button
                android:id="@+id/btGerenciarHidrometros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btGerenciarHidrometros" />

        </LinearLayout>

        <Button
            android:id="@+id/btExportarLeituras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btExportarLeituras" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="37dp"
                android:text="@string/btSair" />

        </RelativeLayout>
    </LinearLayout>