
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvProximaLeitura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvProximaLeitura"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btProximaLeitura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btProximaLeitura" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNumeroC"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNomeC"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvLeitura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvLeitura"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/etLeitura"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/btSalvar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btSalvar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.56" >

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="29dp" >

                        <Button
                            android:id="@+id/btLeituraAnterior"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="0.45"
                            android:text="@string/btLeituraAnterior" />

                        <Button
                            android:id="@+id/btLeituraProxima"
                            android:layout_width="wrap_content"
                            android:layout_height="98dp"
                            android:layout_weight="0.49"
                            android:text="@string/btLeituraProxima" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/linearLayout1"
                        android:layout_marginTop="24dp" >
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvObservacaoC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignTop="@+id/relativeLayout1"
                        android:text="@string/tvObservacaoC"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
